# pythonProject8

ToDo-List/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
ToDo-List/.github/workflows/: build.yaml  build_and_deploy.yaml
ToDo-List/deploy/: .env  docker-compose.yaml  nginx.conf
ToDo-List/tests/: conftest.py  factories.py
ToDo-List/tests/board/: test_board_create_view.py  test_board_view.py
ToDo-List/tests/category/: test_category_create_view.py  test_category_view.py
ToDo-List/tests/goal/: test_goal_create_view.py
ToDo-List/todolist/: settings.py  urls.py
ToDo-List/todolist/bot/: models.py  serializers.py  urls.py  views.py
ToDo-List/todolist/bot/management/commands/: runbot.py
ToDo-List/todolist/bot/migrations/: 0001_tg_user_model.py
ToDo-List/todolist/bot/tg/: client.py  schemas.py
ToDo-List/todolist/core/: admin.py  serializers.py  urls.py  views.py
ToDo-List/todolist/core/migrations/: 0001_initial.py  0002_alter_user_options.py
ToDo-List/todolist/goals/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
ToDo-List/todolist/goals/migrations/: 0001_initial.py  0002_goal.py  0003_rename_priotity_goal_priority.py  0004_goalcomment.py  0005_rename_author_goalcomment_user.py  0006_board_alter_goalcomment_options_goalcategory_board_and_more.py  0007_create_new_objects.py  0008_alter_goalcategory_board.py  0009_tg_user_model.py
